# spok-poc

./: .prettierrc  Anchor.toml  README.md  package.json
programs/spok/: Cargo.toml
programs/spok/src/: constants.rs  errors.rs  lib.rs  state.rs
programs/spok/src/instructions/: genesis.rs  initialize.rs  mine.rs  mod.rs
tests/: spok.test.ts
